# KVTensor_sigmod

./: README.md
cpp/: CMakeLists.txt
cpp/examples/: UNET_config.txt  export_layers_to_bin.cpp  leveldb_benchmark.cpp  llama_inference.cpp  prefetch_graph_example.cpp  prefetch_graph_sample.txt  preload_config_simple.txt  simpledb_benchmark.cpp  simpledb_generate_sd_weights.cpp  simpledb_generate_weights.cpp  stable_diffusion_inference.cpp
cpp/include/kvtensor/: bufferpool.hpp  context.hpp  llama.hpp  llama_inference.hpp  matrix.hpp  model_utils.hpp  operators.hpp  operators_impl.hpp  prefetch_graph.hpp  prefetch_graph_provider.hpp  preload_utils.hpp  profile.hpp  sd_ops.hpp  simpledb.hpp  stable_diffusion.hpp  stable_diffusion_inference.hpp  storage.hpp  types.hpp
cpp/include/math/: arithmetic.hpp  matmul_strided_ext.hpp
cpp/microbench/: CMakeLists.txt  build_workload_profile.py  common.cpp  common.hpp  compute_bench.cpp  dummy_data.cpp  dummy_data.hpp  fit_model.py  kv_bench.cpp  predict_config.py  runtime_bench.cpp  trace_workload.py  validate_ranking.py
cpp/microbench/configs/: candidates.json  example_candidates.json  example_workload.json  generate_candidates.py  llama32_3b_decode_ctx4096.json  llama32_3b_prefill_seq512.json  llama3_8b_decode_ctx4096.json  llama3_8b_prefill_seq512.json
cpp/src/bufferpool/: pool_gc.cpp
cpp/src/context/: operator_context.cpp
cpp/src/matrix/: block_matrix.cpp
cpp/src/models/: llama_inference.cpp  llama_model.cpp  llama_transformer.cpp  stable_diffusion_inference.cpp  stable_diffusion_model.cpp
cpp/src/operators/: activations.cpp  attention.cpp  elementwise.cpp  feedforward.cpp  layernorm.cpp  matmul.cpp  rmsnorm.cpp  sd_conv_im2col.cpp  sd_group_norm.cpp
cpp/src/simpledb/: simpledb.cpp
cpp/src/storage/: registry.cpp  simpledb_storage.cpp
cpp/src/utils/: model_utils.cpp  prefetch_graph.cpp  prefetch_graph_provider.cpp  preload_utils.cpp  profile.cpp
evaluation/: diffusion.csv  experiment_data.ipynb  merged3b.csv  merged63.csv  prefill_decode_error.csv  prefill_decode_error_scaled.csv  preload.csv  section63.csv  section63_figure1.csv  section63_figure2.csv  section63_figure3.csv  section63_figure4.csv  section63_figure5.csv
evaluation/3b/4c8g/: preload_cost_summary.csv  section63_summary.csv
evaluation/3b/8c16g/: preload_cost_summary.csv  section63_summary.csv
evaluation/calibration_fixed/: compute_calibration_622.csv  kv_calibration_621.csv  runtime_calibration_623.csv  validation_625_cases.csv  validation_625_summary.csv  validation_actuals_625.csv
evaluation/scripts/: plot_paper_figures.py  sync_experiment_data.py
experiment/scripts/: generate_preload_file.py  measure_preload_cost.py  run_llama_prefill_logits_experiment.py  run_section63.py  run_stable_diffusion_experiment.py
